@@ -1,3 +1,9 @@
+2010-10-02  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/winTheme.tcl, library/ttk/xpTheme.tcl, 
+	library/ttk/vistaTheme.tcl: Specify disabled combobox text 
+	foreground color [Bug#3057573].
+
 2010-09-01  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.9 TAGGED FOR RELEASE ***
